--- a/css/components.css
+++ b/css/components.css
@@ -11,6 +11,7 @@
     text-decoration: none;
     font-weight: bold;
     background-color: var(--primary);
+    color: var(--white);
     padding: 1rem;
     border-radius: 0.5rem;
     font-size: large;
@@ -67,16 +68,71 @@ nav{
     gap: 10rem;
     margin-top: 3rem;
     h1{
-        font-size: 5rem;
         margin-bottom: 0;
         padding: 0;
     }
     p{
         margin-top: 0;
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
     img{
         width: 100%;
     }
     margin-bottom: 3rem;
+    @media (min-width: 46.875em) {
+        h1{
+            font-size: 5rem;
+        }
+        p{
+            font-size: 2rem;
+        }
+    }
+}
+.cards{
+    padding-left: 0;
+    li{
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        box-shadow: 0 0 0.5rem;
+        border-radius:  0.5rem;
+        margin-bottom: 2rem;
+        padding: 1rem;
+        background-color: var(--white);
+        h3{
+            margin-top: auto;
+        }
+        .button{
+            margin-top: auto;
+            margin-left: auto;
+            margin-right: 0;
+        }
+    }
+    img{
+        height: 20rem;
+        object-fit: contain;
+        order: -1;
+    }
+    @media (min-width: 46.875em) {
+        display: flex;
+        gap: 1.5rem;
+        margin: 0;
+        padding: 0;
+        flex-wrap: wrap;
+
+        li{
+            position: relative;
+            display: flex;
+            width: 25rem;
+            flex-basis: 18rem;
+            box-shadow: 0 0 .2rem;
+            border-radius: 0.5rem;
+            padding-left: 1rem;
+            /* transition: transform 250ms;
+            &:hover {
+                transform: translateY(10px);
+            } */
+        }
+    }
+
 }
