--- a/css/generic.css
+++ b/css/generic.css
@@ -17,3 +17,13 @@ body{
     padding: 0;
     margin: 0;
 }
+h1{
+    font-size: 2.5rem;
+}
+h2{
+    font-size: 2rem;
+}
+h3{
+    font-size: 1.5rem;
+    
+}
