--- a/css/generic.css
+++ b/css/generic.css
@@ -17,6 +17,9 @@ body{
     padding: 0;
     margin: 0;
 }
+footer{
+    background-color: var(--light-mode-footer);
+}
 h1{
     font-size: 2.5rem;
     
