--- a/styles/style.css
+++ b/styles/style.css
@@ -39,6 +39,7 @@
 @import "./components/a.css";
 @import "./components/highlight.css";
 @import "./components/intro.css";
+@import "./components/social.css";
 
 /* layout */
 /* @import "./layout"; */
