--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -1,10 +1,13 @@
 .footer{
     margin: 0;
-    color: var(--primary-text);
     padding: 1rem;
     text-align: center;
     P{
         font-weight: bold;
         margin: 0;
     }
+    max-width: var(--containerWidth);
+    margin-inline: auto;
+    padding-inline: var(--containerPadding);
+    border-top: 0.2rem solid var(--primary);
 }
