--- a/styles/style.css
+++ b/styles/style.css
@@ -40,6 +40,7 @@
 @import "./components/highlight.css";
 @import "./components/intro.css";
 @import "./components/social.css";
+@import "./components/list.css";
 
 /* layout */
 /* @import "./layout"; */
