--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -1,7 +1,5 @@
 .hero{
-    padding: 10rem;
     text-align: center;
-    color: var(--white);
     .big{
         font-weight: bold;
         font-size: 4rem;
@@ -9,12 +7,27 @@
     .extra{
         font-size: 2rem;
     }
+    h1{
+        font-size: 250%;
+        margin: 0;
+    }
+    p{
+        font-size: 150%;
+        margin: 0;
+        margin-bottom: 2rem;
+    }
+    @media (min-width: 46.875em) {
+        h1{
+            margin-top: 5rem;
+            font-size: 600%;
+            line-height: 5rem;
+        }
+        p{
+            font-size: 250%;
+            line-height: 5rem;
+        }
+    }
 }
 .hero-img{
-    padding: 0;
-    background-image: url(https://placehold.co/300x100);
-    background-size: 100%;
-    height: 30rem;
-    align-content: center;
-
+    background-image:url("../../images/bg_blur.png");
 }
