--- a/styles/base/typografie.css
+++ b/styles/base/typografie.css
@@ -1,10 +1,6 @@
 :root{
     /* Typografie */
-    font-family: "DM Sans", sans-serif;
+    font-family: "League Spartan", sans-serif;
     line-height: 1.6;
     font-size: 1em;
-    h2{
-        margin-top: 2rem;
-        margin-bottom: 0.5rem;
-    }
 }
