--- a/styles/generic/common.css
+++ b/styles/generic/common.css
@@ -12,8 +12,13 @@ body {
 a{
     color: inherit;
 }
+h1{
+    font-size: 250%;
+}
 h2{
     font-size: 200%;
+    margin-top: 3rem;
+    margin-bottom: 0;
 }
 h3{
     font-size: 150%;
