--- a/styles/generic/common.css
+++ b/styles/generic/common.css
@@ -14,6 +14,7 @@ a{
 }
 h1{
     font-size: 250%;
+    margin-bottom: 0;
 }
 h2{
     font-size: 200%;
@@ -22,4 +23,7 @@ h2{
 }
 h3{
     font-size: 150%;
+}
+p{
+    margin-bottom: 1rem;
 }
