--- a/styles/components/card.css
+++ b/styles/components/card.css
@@ -20,6 +20,7 @@
         h3{
             padding-bottom: 0;
             margin: 0;
+            margin-top: auto;
         }
         img{
             order: -1;
@@ -55,6 +56,15 @@
     white-space: nowrap;
     overflow: hidden;
 }
-.card-horizontal{
-    
+.card-logo{
+    li{
+        h3{
+            padding-top: 0;
+        }
+        img{
+            padding: 1.5rem;
+            object-fit: contain;
+            padding-bottom: 0;
+        }
+    }
 }
