--- a/styles/components/button.css
+++ b/styles/components/button.css
@@ -8,6 +8,7 @@
     font-weight: bold;
     border-radius: var(--round);
     margin: 1rem;
+    margin-left: 0;
     border: 0;
     transition: transform 250ms;
     &:hover {
