added component for max with text

--- a/styles/style.css
+++ b/styles/style.css
@@ -41,6 +41,7 @@
 @import "./components/intro.css";
 @import "./components/social.css";
 @import "./components/list.css";
+@import "./components/text.css";
 
 /* layout */
 /* @import "./layout"; */
